# rust-wasm-grpc

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
client/client/: Cargo.toml
client/client/src/: lib.rs
client/shared/: Cargo.toml  build.rs
client/shared/src/: lib.rs
client/worker/: Cargo.toml
client/worker/src/: lib.rs
jokes/: knock-knock.txt  limericks.txt
proto/: streamer.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
www/: index.html
