[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
# Disable https for devserver
devserver_lib = { version = "0.4.2", default-features = false }
http = "1.3.1"
prost = "0.13.5"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.13.0"
tonic-web = "0.13.0"
tower-http = { version = "0.6.2", default-features = false, features = ["cors"] }

[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.13"
