[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
futures-core = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-worker = { version = "0.5.0", features = [ "futures" ] }
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
tonic = { version = "0.13.0", default-features = false, features = ["codegen", "prost"] }
tonic-web-wasm-client = "0.7.0"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [ "console" ] }

[build-dependencies]
prost-build = "0.13.4"
tonic-build = { version = "0.13", default-features = false, features = [ "prost" ] }
