[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.31"
gloo-worker = { version = "0.5.0", features = [ "futures" ] }
shared = { path = "../shared" }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [ "console" ] }
